# Sudoku-Solver

./: readme.md  sudoku.py
cpp/: CMakeLists.txt
cpp/src/: main.cpp  sudoku.hpp
